--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <div>
+      <img class="avatar-circle" src="/images/avatar.jpg" />
+      <h2 class="footer-heading">Luis Felipe Dom&iacute;nguez Vega</h2>
+    </div>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
