--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,7 @@ layout: default
      */
 
     var disqus_config = function () {
+        this.language = "es";
         this.page.url = page.path;  // Replace PAGE_URL with your page's canonical URL variable
         this.page.identifier = page.id; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
