--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,77 +1,87 @@
-/**
- * Syntax highlighting styles
- */
-.highlight {
-    background: #fff;
-    @extend %vertical-rhythm;
+/* Solarized Dark
 
-    .hll { background-color: #ffffcc }
-    .c { color: #8f5902; font-style: italic } /* Comment */
-    .err { color: #a40000; border: 1px solid #ef2929 } /* Error */
-    .g { color: #000000 } /* Generic */
-    .k { color: #204a87; font-weight: bold } /* Keyword */
-    .l { color: #000000 } /* Literal */
-    .n { color: #000000 } /* Name */
-    .o { color: #ce5c00; font-weight: bold } /* Operator */
-    .x { color: #000000 } /* Other */
-    .p { color: #000000; font-weight: bold } /* Punctuation */
-    .cm { color: #8f5902; font-style: italic } /* Comment.Multiline */
-    .cp { color: #8f5902; font-style: italic } /* Comment.Preproc */
-    .c1 { color: #8f5902; font-style: italic } /* Comment.Single */
-    .cs { color: #8f5902; font-style: italic } /* Comment.Special */
-    .gd { color: #a40000 } /* Generic.Deleted */
-    .ge { color: #000000; font-style: italic } /* Generic.Emph */
-    .gr { color: #ef2929 } /* Generic.Error */
-    .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-    .gi { color: #00A000 } /* Generic.Inserted */
-    .go { color: #000000; font-style: italic } /* Generic.Output */
-    .gp { color: #8f5902 } /* Generic.Prompt */
-    .gs { color: #000000; font-weight: bold } /* Generic.Strong */
-    .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-    .gt { color: #a40000; font-weight: bold } /* Generic.Traceback */
-    .kc { color: #204a87; font-weight: bold } /* Keyword.Constant */
-    .kd { color: #204a87; font-weight: bold } /* Keyword.Declaration */
-    .kn { color: #204a87; font-weight: bold } /* Keyword.Namespace */
-    .kp { color: #204a87; font-weight: bold } /* Keyword.Pseudo */
-    .kr { color: #204a87; font-weight: bold } /* Keyword.Reserved */
-    .kt { color: #204a87; font-weight: bold } /* Keyword.Type */
-    .ld { color: #000000 } /* Literal.Date */
-    .m { color: #0000cf; font-weight: bold } /* Literal.Number */
-    .s { color: #4e9a06 } /* Literal.String */
-    .na { color: #c4a000 } /* Name.Attribute */
-    .nb { color: #204a87 } /* Name.Builtin */
-    .nc { color: #000000 } /* Name.Class */
-    .no { color: #000000 } /* Name.Constant */
-    .nd { color: #5c35cc; font-weight: bold } /* Name.Decorator */
-    .ni { color: #ce5c00 } /* Name.Entity */
-    .ne { color: #cc0000; font-weight: bold } /* Name.Exception */
-    .nf { color: #000000 } /* Name.Function */
-    .nl { color: #f57900 } /* Name.Label */
-    .nn { color: #000000 } /* Name.Namespace */
-    .nx { color: #000000 } /* Name.Other */
-    .py { color: #000000 } /* Name.Property */
-    .nt { color: #204a87; font-weight: bold } /* Name.Tag */
-    .nv { color: #000000 } /* Name.Variable */
-    .ow { color: #204a87; font-weight: bold } /* Operator.Word */
-    .w { color: #f8f8f8; text-decoration: underline } /* Text.Whitespace */
-    .mf { color: #0000cf; font-weight: bold } /* Literal.Number.Float */
-    .mh { color: #0000cf; font-weight: bold } /* Literal.Number.Hex */
-    .mi { color: #0000cf; font-weight: bold } /* Literal.Number.Integer */
-    .mo { color: #0000cf; font-weight: bold } /* Literal.Number.Oct */
-    .sb { color: #4e9a06 } /* Literal.String.Backtick */
-    .sc { color: #4e9a06 } /* Literal.String.Char */
-    .sd { color: #8f5902; font-style: italic } /* Literal.String.Doc */
-    .s2 { color: #4e9a06 } /* Literal.String.Double */
-    .se { color: #4e9a06 } /* Literal.String.Escape */
-    .sh { color: #4e9a06 } /* Literal.String.Heredoc */
-    .si { color: #4e9a06 } /* Literal.String.Interpol */
-    .sx { color: #4e9a06 } /* Literal.String.Other */
-    .sr { color: #4e9a06 } /* Literal.String.Regex */
-    .s1 { color: #4e9a06 } /* Literal.String.Single */
-    .ss { color: #4e9a06 } /* Literal.String.Symbol */
-    .bp { color: #3465a4 } /* Name.Builtin.Pseudo */
-    .vc { color: #000000 } /* Name.Variable.Class */
-    .vg { color: #000000 } /* Name.Variable.Global */
-    .vi { color: #000000 } /* Name.Variable.Instance */
-    .il { color: #0000cf; font-weight: bold } /* Literal.Number.Integer.Long */
-}
+For use with Jekyll and Pygments
+
+http://ethanschoonover.com/solarized
+
+SOLARIZED HEX      ROLE
+--------- -------- ------------------------------------------
+base03    #002b36  background
+base01    #586e75  comments / secondary content
+base1     #93a1a1  body text / default code / primary content
+orange    #cb4b16  constants
+red       #dc322f  regex, special keywords
+blue      #268bd2  reserved keywords
+cyan      #2aa198  strings, numbers
+green     #859900  operators, other keywords
+*/
+
+.highlight { background-color: #002b36; color: #93a1a1 }
+.highlight .c { color: #586e75 } /* Comment */
+.highlight .err { color: #93a1a1 } /* Error */
+.highlight .g { color: #93a1a1 } /* Generic */
+.highlight .k { color: #859900 } /* Keyword */
+.highlight .l { color: #93a1a1 } /* Literal */
+.highlight .n { color: #93a1a1 } /* Name */
+.highlight .o { color: #859900 } /* Operator */
+.highlight .x { color: #cb4b16 } /* Other */
+.highlight .p { color: #93a1a1 } /* Punctuation */
+.highlight .cm { color: #586e75 } /* Comment.Multiline */
+.highlight .cp { color: #859900 } /* Comment.Preproc */
+.highlight .c1 { color: #586e75 } /* Comment.Single */
+.highlight .cs { color: #859900 } /* Comment.Special */
+.highlight .gd { color: #2aa198 } /* Generic.Deleted */
+.highlight .ge { color: #93a1a1; font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #dc322f } /* Generic.Error */
+.highlight .gh { color: #cb4b16 } /* Generic.Heading */
+.highlight .gi { color: #859900 } /* Generic.Inserted */
+.highlight .go { color: #93a1a1 } /* Generic.Output */
+.highlight .gp { color: #93a1a1 } /* Generic.Prompt */
+.highlight .gs { color: #93a1a1; font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #cb4b16 } /* Generic.Subheading */
+.highlight .gt { color: #93a1a1 } /* Generic.Traceback */
+.highlight .kc { color: #cb4b16 } /* Keyword.Constant */
+.highlight .kd { color: #268bd2 } /* Keyword.Declaration */
+.highlight .kn { color: #859900 } /* Keyword.Namespace */
+.highlight .kp { color: #859900 } /* Keyword.Pseudo */
+.highlight .kr { color: #268bd2 } /* Keyword.Reserved */
+.highlight .kt { color: #dc322f } /* Keyword.Type */
+.highlight .ld { color: #93a1a1 } /* Literal.Date */
+.highlight .m { color: #2aa198 } /* Literal.Number */
+.highlight .s { color: #2aa198 } /* Literal.String */
+.highlight .na { color: #93a1a1 } /* Name.Attribute */
+.highlight .nb { color: #B58900 } /* Name.Builtin */
+.highlight .nc { color: #268bd2 } /* Name.Class */
+.highlight .no { color: #cb4b16 } /* Name.Constant */
+.highlight .nd { color: #268bd2 } /* Name.Decorator */
+.highlight .ni { color: #cb4b16 } /* Name.Entity */
+.highlight .ne { color: #cb4b16 } /* Name.Exception */
+.highlight .nf { color: #268bd2 } /* Name.Function */
+.highlight .nl { color: #93a1a1 } /* Name.Label */
+.highlight .nn { color: #93a1a1 } /* Name.Namespace */
+.highlight .nx { color: #93a1a1 } /* Name.Other */
+.highlight .py { color: #93a1a1 } /* Name.Property */
+.highlight .nt { color: #268bd2 } /* Name.Tag */
+.highlight .nv { color: #268bd2 } /* Name.Variable */
+.highlight .ow { color: #859900 } /* Operator.Word */
+.highlight .w { color: #93a1a1 } /* Text.Whitespace */
+.highlight .mf { color: #2aa198 } /* Literal.Number.Float */
+.highlight .mh { color: #2aa198 } /* Literal.Number.Hex */
+.highlight .mi { color: #2aa198 } /* Literal.Number.Integer */
+.highlight .mo { color: #2aa198 } /* Literal.Number.Oct */
+.highlight .sb { color: #586e75 } /* Literal.String.Backtick */
+.highlight .sc { color: #2aa198 } /* Literal.String.Char */
+.highlight .sd { color: #93a1a1 } /* Literal.String.Doc */
+.highlight .s2 { color: #2aa198 } /* Literal.String.Double */
+.highlight .se { color: #cb4b16 } /* Literal.String.Escape */
+.highlight .sh { color: #93a1a1 } /* Literal.String.Heredoc */
+.highlight .si { color: #2aa198 } /* Literal.String.Interpol */
+.highlight .sx { color: #2aa198 } /* Literal.String.Other */
+.highlight .sr { color: #dc322f } /* Literal.String.Regex */
+.highlight .s1 { color: #2aa198 } /* Literal.String.Single */
+.highlight .ss { color: #2aa198 } /* Literal.String.Symbol */
+.highlight .bp { color: #268bd2 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #268bd2 } /* Name.Variable.Class */
+.highlight .vg { color: #268bd2 } /* Name.Variable.Global */
+.highlight .vi { color: #268bd2 } /* Name.Variable.Instance */
+.highlight .il { color: #2aa198 } /* Literal.Number.Integer.Long */
